# chessbik-server

./: .gitignore  .gitmodules  Cargo.toml  README.md  WS_URL  build.rs
src/: main.rs  websocket.rs
src/data/: game.rs  mod.rs  player.rs  players.rs
src/data_server/: create_game.rs  game_subscription.rs  game_unsubscription.rs  mod.rs  request_board.rs  request_engine_addition.rs  request_make_move.rs  request_opponent_addition.rs  request_opponent_name_update.rs  request_player_removal.rs  request_player_token.rs  request_players.rs
src/engine_actor/: mod.rs
src/routes/: chessbik_bg_wasm.rs  chessbik_js.rs  index_html.rs  mod.rs
www/: index.html
