[package]
name = "chessbik-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
actix = "*"
actix-web = "*"
actix-web-actors = "*"
actix-cors = "*"
actix-files = "*"
futures-util = "*"
dashmap = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = "*"
rand = "*"
mime = "*"
chessbik-board = { git = "https://github.com/necromfox/chessbik-board" }
chessbik-commons = { git = "https://github.com/necromfox/chessbik-commons" }
